--- a/privacy.html
+++ b/privacy.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <!-- title -->
-        <title>Offst &mdash; World Time</title>
+        <title>Offst &mdash; Privacy Policy</title>
 
         <!-- meta -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta property="og:site_name" content="Offst">
-        <meta property="og:title" content="Offst &mdash; World Time">
+        <meta property="og:title" content="Offst &mdash; Privacy Policy">
         <meta property="og:description" content="Always know what time it is. Everywhere.">
         <meta property="og:image" content="https://offst.com/assets/social.png">
         <meta property="og:url" content="https://offst.com">
@@ -23,7 +23,7 @@
         <!-- stylesheets -->
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body class="home">
+    <body>
 
         <nav class="header">
             <a href="/">
@@ -31,16 +31,11 @@
             </a>
         </nav>
 
-        <section class="container content">
-            <h1>Offst</h1>
-            <h2>Always know what time it is. Everywhere.</h2>
-            <div class="stores">
-                <div class="store-button">
-                    <a target="_blank" href="https://apps.apple.com/app/apple-store/id1547184547?pt=40823800&ct=Website&mt=8">
-                        <img height=50 src="./assets/appstore.svg" alt="Download Offst on the App Store">
-                    </a>
-                </div>
-            </div>
+        <section class="container main">
+            <h1>Privacy Policy</h1>
+            <p>Offst does not collect or store any data or information.</p>
+            <p>The app doesn't collect any analytics data, and no services are used to identify or track you.</p>
+            <p>The website doesn't collect any analytics data, and no services are used to identify or track you.</p>
         </section>
 
         <footer class="container">
