--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <meta property="og:site_name" content="Offst">
         <meta property="og:title" content="Offst &mdash; World Time">
         <meta property="og:description" content="Always know what time it is. Everywhere.">
-        <meta property="og:image" content="https://offst.com/assets/social.png">
-        <meta property="og:url" content="https://offst.com">
+        <meta property="og:image" content="https://offst.app/assets/social.png">
+        <meta property="og:url" content="https://offst.app">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@offsthq">
         <meta name="twitter:creator" content="@enricenrich">
         <meta name="twitter:description" content="Always know what time it is. Everywhere.">
-        <meta name="twitter:image" content="https://offst.com/assets/social.png">
+        <meta name="twitter:image" content="https://offst.app/assets/social.png">
 
         <!-- stylesheets -->
         <link rel="stylesheet" href="css/style.css">
@@ -46,7 +46,7 @@
         <footer class="container">
             <div class="menu">
                 <div class="item">
-                    <a href="mailto:hello@offst.com">Support</a>
+                    <a href="mailto:hello@offst.app">Support</a>
                 </div>
                 <div class="item">
                     <a href="/privacy">Privacy</a>
